--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,4 +38,10 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest
+        pytest -s -v --cov=megspikes --cov-report=xml
+    - name: Upload coverage
+      uses: codecov/codecov-action@v1
+      with:
+        flags: unittests 
+        fail_ci_if_error: true 
+        verbose: true
