--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -38,10 +38,11 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        pytest -s -v --cov=megspikes --cov-report=xml
-    - name: Upload coverage
+        pytest -v --cov=megspikes --cov-report=xml
+    - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
+        token: ${{ secrets.CODECOV_TOKEN }} # not required for public repos
         flags: unittests 
         fail_ci_if_error: true 
         verbose: true
