--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,21 @@
 alphacsc @ git+https://github.com/alphacsc/alphacsc.git#egg=alphacsc-0.4.dev0
-matplotlib
-mne
-netCDF4
+hvplot>=0.7.3
+matplotlib>=3.4.3
+mne>=0.23.2
+netCDF4>=1.5.7
 nibabel
 nilearn
-numpy
-openpyxl
-pandas
-panel
-param
-pytest
-pyyaml
+notebook>=6.4.3
+numpy>=1.20.3
+openpyxl>=3.0.7
+pandas>=1.3.2
+panel>=0.12.1
+param>=1.11.1
+pyqt5>=5.15.4
+pytest>=6.2.4
+pyvista>=0.30
+pyvistaqt>=0.4
+pyyaml>=5.4.1
 scikit-learn
-scipy
-xarray
+scipy>=1.7.1
+xarray>=0.19.0
