--- a/megspikes/clusters_default_params.yml
+++ b/megspikes/clusters_default_params.yml
@@ -1,17 +1,20 @@
+# NOTE: commented parameters are set dynamically
 PrepareClustersDataset:
   detection_sfreq: 200. # Hz
   evoked_length: 1. # seconds
+
 ClustersLocalization:
   inv_method: MNE
   epochs_window: [-0.5, 0.5]
-  spacing: ico5
+  spacing: ico5 # the number of sources in the forward model
   # case: CaseManager
   # sensors: True
+
 PredictIZClusters:
   smoothing_steps_one_cluster: 3
   smoothing_steps_final: 10
   amplitude_threshold: 0.5
   min_sources: 10
-  spacing: ico5
+  spacing: ico5 # the number of sources in the forward model
   # case: CaseManager
   # sensors: True
