--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,22 @@
 alphacsc @ git+https://github.com/alphacsc/alphacsc.git#egg=alphacsc-0.4.dev0
-hvplot>=0.7.3
-matplotlib>=3.4.3
-mne>=0.23.2
-netCDF4>=1.5.7
-nibabel
-nilearn
-notebook>=6.4.3
-numpy>=1.20.3
-openpyxl>=3.0.7
-pandas>=1.3.2
-panel>=0.12.1
-param>=1.11.1
-pyqt5>=5.15.4
+hvplot==0.7.3
+matplotlib==3.4.3
+mne==0.23.3
+netCDF4==1.5.7
+nibabel==3.2.1
+nilearn==0.8.0
+notebook==6.4.3
+numpy==1.20.3
+openpyxl==3.0.7
+pandas==1.3.2
+panel==0.12.1
+param==1.11.1
+pyqt5==5.15.4
 pytest>=6.2.4
-pyvista>=0.30
-pyvistaqt>=0.4
-pyyaml>=5.4.1
-scikit-learn
-scipy>=1.7.1
-xarray>=0.19.0
-pooch>=1.5.2
+pyvista==0.31.3
+pyvistaqt==0.5.0
+pyyaml==5.4.1
+scikit-learn==0.24.2
+scipy==1.7.1
+xarray==0.19.0
+pooch==1.5.2
