--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-alphacsc @ git+https://github.com/alphacsc/alphacsc.git#egg=alphacsc-0.4.dev0
+alphacsc==0.4.0rc7
 hvplot==0.7.3
 matplotlib==3.4.3
 mne==0.23.3
@@ -6,7 +6,7 @@ netCDF4==1.5.7
 nibabel==3.2.1
 nilearn==0.8.0
 notebook==6.4.3
-numpy==1.20.3
+numpy==1.21.0
 openpyxl==3.0.7
 pandas==1.3.2
 panel
